<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serverHost">Server Host</string>
    <string name="serverPort">Server Port</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="radioHeader">Gender: </string>
    <string name="toastGreeting">Hello</string>
    <string name="mapFragmentMessage">This is the map fragment</string>

</resources>